# flex-launcher

./: .gitignore  CHANGELOG  CHANGELOG.txt  CMakeLists.txt  README.md  UNLICENSE.txt  vcpkg.json
.github/workflows/: build.yml
config/: PKGBUILD.in  config.ini.in  config_settings.cmake  flex-launcher.manifest.in  launcher_config.h.in
docs/: .~lock.index.md#  Gemfile  _config.yml  compilation.md  configuration.md  download.md  index.md  setup.md  setup_linux.md  setup_windows.md
docs/_data/: menu.yml
docs/_includes/: head-custom-google-analytics.html
docs/_layouts/: default.html
docs/_sass/: jekyll-theme-slate.scss
extra/: PKGBUILD.in  flex-launcher.rc  launcher.desktop.in
extra/docs/: compilation_guide.md  configuration.md
src/: CMakeLists.txt  clock.c  clock.h  debug.c  debug.h  image.c  image.h  launcher.c  launcher.h  launcher.h.in  launcher_config.h.in  util.c  util.h
src/platform/: CMakeLists.txt  keycode_convert.h  platform.h  slideshow.h  unix.c  unix.h  win32.c  win32.h  windows.c
